--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/recyclebinlist.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/recyclebinlist.vm
@@ -1,33 +1,55 @@
 ### Show list of deleted documents
-#set($dds=$xwiki.getDeletedDocuments($tdoc.getFullName(), $tdoc.getLanguage()))
-#if($dds && ($dds.size() > 0))
-<div class="centered">
-<p>$services.localization.render('core.recyclebin.showlistmsg')</p>
-<table class="centered">
- <thead>
-  <tr>
-   <th>$services.localization.render('core.recyclebin.deleter')</td>
-   <th>$services.localization.render('core.recyclebin.deleteDate')</td>
-   <th colspan="2">$services.localization.render('core.recyclebin.actions')</th>
-  </tr>
- </thead>
- <tbody>
- #foreach($dd in $dds)
-  <tr>
-   <td>$xwiki.getUserName($dd.getDeleter())</td>
-   <td><a href="$doc.getURL("view", "viewer=recyclebin&amp;id=$dd.getId()")">$xwiki.formatDate($dd.getDate())</a></td>
-   <td>#if($dd.canUndelete()) <a href="$xwiki.getURL($tdoc.getFullName(), "undelete", "form_token=$!{services.csrf.getToken()}&amp;id=$dd.getId()")">$services.localization.render('core.recyclebin.restore')</a> #end</td>
-   <td>
-    #if($dd.canDelete())
-     <a href="$xwiki.getURL($tdoc.getFullName(), 'delete', "form_token=$!{services.csrf.getToken()}&amp;id=$dd.getId()")"
-      onclick="if (confirm('$services.localization.render('core.recyclebin.completelyDeleteConfirm')')) {this.href += '&amp;confirm=1'; return true;} return false;">
-      $services.localization.render('core.recyclebin.delete')
-     </a>
-    #end
-   </td>
-  </tr>
- #end
- </tbody>
-</table>
-</div>
+#set($dds = $xwiki.getDeletedDocuments($tdoc.fullName, $tdoc.language))
+#displayDeletedDocuments($dds)
+
+#if ($doc.name == 'WebHome')
+  ## Also display the list of terminal documents sharing the same location.
+  ## eg. If the current document is: "A.B.WebHome", we should also display any deleted terminal page called "A.B".
+  ## This is important because when the user delete a terminal document and go back to the location, she should see
+  ## the page she have just deleted, and not an empty page because A.B.WebHome has never existed...
+  #set($dds = $xwiki.getDeletedDocuments($tdoc.space, $tdoc.language))
+  #displayDeletedDocuments($dds, 'core.recyclebin.showListTerminalPagesMsg')
+#end
+
+#*
+ * Display the given list of deleted documents
+ * @param $list the list to display
+ * @param $message (optional) the translation key for the message which introduce the list
+ *#
+#macro (displayDeletedDocuments $list $message)
+  #if (!$message)
+    #set ($message = 'core.recyclebin.showlistmsg')
+  #end  
+  #if($list && $list.size() > 0)
+    <hr />
+    <div class="centered">
+      <p>$escapetool.xml($services.localization.render($message))</p>
+      <table class="centered">
+       <thead>
+        <tr>
+         <th>$escapetool.xml($services.localization.render('core.recyclebin.deleter'))</td>
+         <th>$escapetool.xml($services.localization.render('core.recyclebin.deleteDate'))</td>
+         <th colspan="2">$escapetool.xml($services.localization.render('core.recyclebin.actions'))</th>
+        </tr>
+       </thead>
+       <tbody>
+       #foreach($dd in $list)
+        <tr>
+         <td>$xwiki.getUserName($dd.getDeleter())</td>
+         <td><a href="$doc.getURL("view", "viewer=recyclebin&amp;id=$dd.getId()")">$xwiki.formatDate($dd.getDate())</a></td>
+         <td>#if($dd.canUndelete()) <a href="$xwiki.getURL($dd.getFullName(), "undelete", "form_token=$!{services.csrf.getToken()}&amp;id=$dd.getId()")">$escapetool.xml($services.localization.render('core.recyclebin.restore'))</a> #end</td>
+         <td>
+          #if($dd.canDelete())
+           <a href="$xwiki.getURL($dd.getFullName(), 'delete', "form_token=$!{services.csrf.getToken()}&amp;id=$dd.getId()")"
+            onclick="if (confirm('$escapetool.javascript($services.localization.render('core.recyclebin.completelyDeleteConfirm'))')) {this.href += '&amp;confirm=1'; return true;} return false;">
+            $escapetool.xml($services.localization.render('core.recyclebin.delete'))
+           </a>
+          #end
+         </td>
+        </tr>
+       #end
+       </tbody>
+      </table>
+    </div>
+  #end
 #end
