XWIKI-12176: Add a Document Displayer based on the Document Tree macro * Update the #hierarchy_parentChild() macro

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy_macros.vm
@@ -210,6 +210,7 @@
         $doc.documentReference: $tdoc
       }
     })
-    #displayHierarchyPath($path $options)
+    #getHierarchyPathData($path $data $options)
+    #displayHierarchyPath($data $options)
   #end
 #end
