XWIKI-12176: Add a Document Displayer based on the Document Tree macro * The #hierarchy() macro shouldn't depend on the skin if it's going to be used as a displayer (in view mode).

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/hierarchy_macros.vm
@@ -176,7 +176,7 @@
       #end
     #elseif ($reference.type == 'WIKI')
       #if ($foreach.index == 0 && !$options.plain)
-        #set ($label = '<span class="glyphicon glyphicon-home"></span>')
+        #set ($label = $services.icon.renderHTML('home'))
       #else
         #set ($wikiPrettyName = $services.wiki.getById($reference.name).prettyName)
         #if ("$!wikiPrettyName" != '')
