XWIKI-12176: Add a Document Displayer based on the Document Tree macro * Fallback on Silk when $services.icon is not present.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy_macros.vm
@@ -176,7 +176,12 @@
       #end
     #elseif ($reference.type == 'WIKI')
       #if ($foreach.index == 0 && !$options.plain)
-        #set ($label = $services.icon.renderHTML('home'))
+        #if ($services.icon)
+          #set ($label = $services.icon.renderHTML('home'))
+        #else
+          ## Fallback on the Silk icon set for now as it is bundled by default.
+          #set ($label = "<img src=""$xwiki.getSkinFile('icons/silk/house.png')"" />")
+        #end
       #else
         #set ($wikiPrettyName = $services.wiki.getById($reference.name).prettyName)
         #if ("$!wikiPrettyName" != '')
